<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <!-- Scrollable Content -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFF2D5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Profile Image -->

            <!-- Name -->
            <!-- Back Button -->
            <ImageButton
                android:id="@+id/back_button"
                android:layout_gravity="start"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/desc1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="184dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/circle_background"
                android:contentDescription="@string/desc1"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile_placeholder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="4dp"
                android:text="@string/user"
                android:textColor="#333333"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Edit Account -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/edit_account"
                android:textColor="#007BFF"
                android:textSize="14sp" />

            <!-- Profile Options -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="303dp"
                android:orientation="vertical">

                <!-- Orders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/orders"
                        android:src="@drawable/ic_orders"
                        app:tint="#333333" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/menu1"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- ECO Wallet -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/wallet"
                        android:src="@drawable/ic_wallet"
                        app:tint="#333333" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/menu2"
                        android:textColor="#333333"
                        android:textSize="16sp" />

                    <!-- Wallet Amount -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu2_value"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Reviews -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/review"
                        android:src="@drawable/ic_reviews"
                        app:tint="#333333" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/menu3"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Cart -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="8dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/cart"
                        android:src="@drawable/ic_cart"
                        app:tint="#333333" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/menu4"
                        android:textColor="#333333"
                        android:textSize="16sp" />
                </LinearLayout>

                <!-- Other Options -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/others1"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <!-- Sign Out -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:text="@string/others2"
                    android:textColor="#FF0000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
